fix bug of responsive on mobile , fix bug of slider,Complete fist the project

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,7 +1,11 @@
 /*  Responsive cho Các giao diện */
 
 /*  MOBILE  */
-@media ( max-width: 46.25em ) {
+@media ( max-width: 46.1875em ) {
+    .s-mt-8 {
+        margin-top: 8px;
+    }
+
     .s-full-width,   
    .s-col-full {
     width: 100%;
@@ -44,19 +48,47 @@
         padding: 5px 40px ;
     }
 
-    #content .content-section {
-        margin-top: 64px;
-    }
-
     #content .member-img {
         width: 60%;
     }
 
     .contact-form {
-        margin-top: 16px;
+        margin-top: 32px ;
     }
     
 
+}
+
+/* TABLET AND MOBILE */
+@media (max-width: 63.9375em) {
+    .btn {
+        padding: 14px 16px;
+    }
+    
+    #nav .subnav a {
+        padding: 5px 12px;
+    }
+
+    .contact-form .form-control {
+        padding: 15px;
+    }    
+    
+    .contact-info {
+        line-height: 2;
+    }
+
+    #footer .socials-list {
+        font-size: 48px;
+    }
+    
+    #footer .socials-list a {
+        margin: 0 8px;
+    }
+
+    #footer .copyright a {
+        padding: 12px 0px;
+        display: inline-block;
+    }
 }
 
 /* TABLET */
